--- a/react-front-end/src/components/Button.css
+++ b/react-front-end/src/components/Button.css
@@ -26,11 +26,19 @@
 }
 
 .btn--go {
-  background-color: rgb(136, 196, 136);
+  background-color: rgb(163, 219, 163);
   color: #242424;
   padding: 8px 20px;
   border: 1px solid var(--night);
   transition: all 0.3s ease-out;
+}
+
+.btn--saved:hover {
+  background: rgb(95, 182, 95);
+  color: white;
+  border-width: thin;
+  transition: all 0.3s ease-out;
+  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
 }
 
 .btn--medium {
