--- a/react-front-end/src/components/Video.css
+++ b/react-front-end/src/components/Video.css
@@ -3,11 +3,18 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: space-between;
-  min-width: 350px;
-  width: 50%;
-  margin: 15px auto;
-  padding: 35px 20px;
-  border-radius: 10px;
+  min-width: 642px;
+  width: 40%;
+  margin: 75px auto;
+  padding: 20px;
+  border-radius: 5px;
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
-  /* opacity: 0.5; */
+  color: white;
+  font-weight: 900;
+  background: url("/images/black-metal.jpeg") center center/cover no-repeat;
+}
+
+h3 {
+  text-align: center;
+  font-size: 20pt;
 }
