--- a/react-front-end/src/components/Video.css
+++ b/react-front-end/src/components/Video.css
@@ -5,16 +5,10 @@
   justify-content: space-between;
   min-width: 642px;
   width: 40%;
-  margin: 75px auto;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  margin:  0px auto 20px;
+  /* padding: 20px; */
+  /* border-radius: 5px; */
+  /* box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17); */
   color: white;
   font-weight: 900;
-  background: url("/images/black-metal.jpeg") center center/cover no-repeat;
-}
-
-h3 {
-  text-align: center;
-  font-size: 20pt;
 }
