--- a/react-front-end/src/components/NavBar.css
+++ b/react-front-end/src/components/NavBar.css
@@ -29,9 +29,8 @@
   align-items: center;
 }
 
-.fa-typo3 {
-  margin-left: 0.5rem;
-  font-size: 1.8rem;
+.fa-fire {
+  color: tomato;
 }
 
 .nav-menu {
