--- a/react-front-end/src/components/Workout.css
+++ b/react-front-end/src/components/Workout.css
@@ -39,3 +39,13 @@
   width: 940px;
   margin: 32px auto;
 }
+
+.save--workout__display--none {
+  display: none;
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
