--- a/react-front-end/src/components/Workout.css
+++ b/react-front-end/src/components/Workout.css
@@ -49,3 +49,9 @@
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.saved--alert {
+  position: fixed; /* or absolute */
+  top: 75%;
+  left: 50%;
+}
