--- a/react-front-end/src/components/pages/ContactForm.css
+++ b/react-front-end/src/components/pages/ContactForm.css
@@ -1,60 +1,24 @@
-:root {
-  --primary: #fff;
-  --night: rgb(53, 42, 42);
-}
-
-.btn {
-  padding: 8px 20px;
-  border-radius: 2px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-.btn--primary {
-  background-color: var(--primary);
-  color: #242424;
-  border: 1px solid var(--primary);
-}
-
-.btn--outline {
-  background-color: transparent;
-  color: #fff;
-  padding: 8px 20px;
-  border: 1px solid var(--primary);
-  transition: all 0.3s ease-out;
-}
-
-.btn--go {
-  background-color: rgb(163, 219, 163);
-  color: #242424;
-  padding: 8px 20px;
-  border: 1px solid var(--night);
-  transition: all 0.3s ease-out;
-}
-
-.btn--saved:hover {
-  background: rgb(95, 182, 95);
-  color: white;
-  border-width: thin;
-  transition: all 0.3s ease-out;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
-}
-
-.btn--medium {
+input[type="submit"] {
   padding: 8px 20px;
   font-size: 18px;
+  background: #242424;
+  color: white;
+  border-radius: 2px;
+  border-color: white;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
 
-.btn--large {
-  padding: 12px 26px;
-  font-size: 20px;
-}
-
-.btn--large:hover,
-.btn--medium:hover {
+input[type="submit"]:hover {
+  padding: 8px 20px;
+  font-size: 18px;
+  background: tomato;
+  color: white;
+  border-radius: 2px;
+  border-color: white;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
   transition: all 0.3s ease-out;
-  background: #fff;
-  color: #242424;
-  transition: 250ms;
 }
