--- a/react-front-end/src/components/ExerciseTable.css
+++ b/react-front-end/src/components/ExerciseTable.css
@@ -30,7 +30,8 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #4caf50;
+  /* background-color: #4caf50; */
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   color: white;
 }
 
@@ -38,14 +39,34 @@
   background-color: rgb(163, 219, 163) !important;
 }
 
-th button.ascending::after {
-  content: "⬇️";
+th button {
+  border: 0;
+  border-radius: 2px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: inherit;
+  color: white;
+  padding: 0.5em;
+  margin-bottom: 1px;
+  background-color: rgb(163, 219, 163);
+}
+
+th button:hover {
+  background-color: #4caf50;
+}
+
+/* th button.ascending::after {
+  content: "↓";
   display: inline-block;
-  margin-left: 1em;
+  margin-left: 0.5em;
 }
 
 th button.descending::after {
-  content: "⬆️";
+  content: "↑";
   display: inline-block;
+  margin-left: 0.5em;
+} */
+
+th label {
   margin-left: 1em;
 }
