--- a/react-front-end/src/components/NavBar.css
+++ b/react-front-end/src/components/NavBar.css
@@ -47,7 +47,7 @@
   width: 60vw;
   /* justify-content: end; */
   /* margin-right: 2rem; */
-  margin-right: -1rem
+  margin-right: -1rem;
 }
 
 .nav-item {
@@ -89,7 +89,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -176,5 +176,5 @@
 
 .hello-user:hover {
   transition: none;
-  border-bottom: none
+  border-bottom: none;
 }
