--- a/react-front-end/src/components/ExerciseTable.css
+++ b/react-front-end/src/components/ExerciseTable.css
@@ -7,6 +7,7 @@
 }
 
 #list {
+  margin-top: 30px;
   border-collapse: collapse;
   width: 100%;
 }
@@ -27,11 +28,11 @@
 }
 
 #list th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   text-align: center;
   /* background-color: #4caf50; */
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: #242424;
   color: white;
 }
 
@@ -40,19 +41,20 @@
 }
 
 th button {
-  border: 0;
-  border-radius: 2px;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: inherit;
+  padding: 8px 20px;
+  font-size: 18px;
+  background: #242424;
   color: white;
-  padding: 0.5em;
-  margin-bottom: 1px;
-  background-color: rgb(163, 219, 163);
+  border-radius: 2px;
+  border-color: white;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
 
 th button:hover {
-  background-color: #4caf50;
+  background-color: rgb(163, 219, 163);
+  color: #242424;
 }
 
 /* th button.ascending::after {
