--- a/react-front-end/src/components/show/DeleteButton.css
+++ b/react-front-end/src/components/show/DeleteButton.css
@@ -34,7 +34,7 @@
 }
 
 .btn--deleted:hover {
-  background: rgb(245, 164, 153);
+  background: tomato;
   color: white;
   border-width: thin;
   transition: all 0.3s ease-out;
